- remove algebra options from dmatrix step 3, refactor DMatrixDenseR and DMatrixDenseC to support stripes, improve range rows and range cols